2009-02-03  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (do_mount): Fix
	possible double-free when the display name is freed
	Avoid errors when the icon name couldn't be gathered

2009-02-02  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 1.1.5 ===

2009-02-02  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2009-02-02  Bastien Nocera  <hadess@hadess.net>

	Bug 511671 - Make obex-ftp work over usb connections

	* configure.ac: Require HAL for the ObexFTP backend
	* daemon/Makefile.am:
	* daemon/gvfsbackendobexftp.c (_get_numbers_from_usb_path),
	(_is_nokia_3650), (_get_bluetooth_name_and_icon),
	(_get_bluetooth_device_properties), (_is_same_path),
	(_find_ods_usb_intfnum), (_get_usb_intfnum_and_properties),
	(do_mount): Add support for USB ObexFTP devices, original
	patch from Alexander Kanavin <ak@sensi.org>, requires
	current obex-data-server trunk

2009-01-28  Ryan Lortie  <desrt@desrt.ca>

	Bug 512144 – symlinks to folders are deleted recursively

	* desrt: place a paper bag over my face
	* daemon/trashlib/trashexpunge.c: try a lot harder to not follow
	symlinks.

2009-01-29  Alexander Larsson  <alexl@redhat.com>

	* common/gvfsicon.c:
	(g_vfs_icon_to_tokens):
	Dup string to avoid double free later.

2009-01-28  Ryan Lortie  <desrt@desrt.ca>

	Bug 569480 – trash backend crashes due to invalid write

	* daemon/trashlib/trashitem.c (trash_item_escape_name): correct
	extremely silly mistake.

	Problem caught by Seb's heroic valgrinding :)

2009-01-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* daemon/gvfsbackendobexftp.c: (_invalidate_cache_helper),
	(do_mount), (push_transfer_started_cb),
	(push_transfer_completed_cb), (push_transfer_progress_cb),
	(push_data_free), (_push_single_file_helper), (do_push),
	(do_make_directory), (g_vfs_backend_obexftp_class_init):
	* daemon/obexftp-marshal.list:
	Implement write support for the ObexFTP backend (#519071).
